# libs/grain-controllers/Controllers/IdentityAPI.cs
@@ -1,4 +1,5 @@
 using System.Reflection;
+using System.Text.Json.Serialization;
 using System.Threading.Tasks;
 using Microsoft.AspNetCore.Builder;
 using Microsoft.AspNetCore.Http;
@@ -19,27 +20,11 @@ public static class IdentityMapping
     accounts.RequireAuthorization("account_update");
 
 
-
-    app.MapPost("/{id}", async (AccountUpdateRequest request)=>
-    {
-      // update account.
-
-    });
-
-    app.MapPost("/new", async (AccountCreateRequest request)  =>
-    {
-
-    }).RequireAuthorization("account_creation");;
-
     app.MapPost("/", async (AccountUpsertRequest request, string apiKey, [FromServices]IGrainFactory grainFactory)  =>
     {
-       // upsert account
-
-
-
-    })
+     })
     .RequireAuthorization("account_upsert")
-    .WithName("AccountUpsert")
+    .WithName("identity.connect")
     .WithOpenApi();
 
 
@@ -60,6 +45,11 @@ public class AccountCreateRequest
 
 public class AccountUpsertRequest:IEndpointParameterMetadataProvider
 {
+  [JsonPropertyName("connection")]
+  public string ConnectionToken { get; set; }
+
+  [JsonPropertyName("authentication")]
+  public string AuthenticationToken { get; set; }
   public static void PopulateMetadata(ParameterInfo parameter, EndpointBuilder builder)
   {
     builder.Metadata.Add(new ConsumesAttribute(typeof(AccountUpsertRequest),  "application/json" ){IsOptional = false});
